--- a/css/default.css
+++ b/css/default.css
@@ -2,12 +2,21 @@ body {
   padding-top: 51px;
 }
 
-.row.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
+.jumboMain {
+  background-image: url(../images/library.jpg);
+  background-size: cover;
+  height: 1100px;
 }
-.row.no-gutters > [class^="col-"],
-.row.no-gutters > [class*=" col-"] {
-  padding-right: 0;
-  padding-left: 0;
+
+#mainTitle {
+  color: white;
+  font-size: 180px;
+  font-family: 'Open Sans', sans-serif;
+  margin-top: 75px;
+}
+
+#mainFeature {
+  color: white;
+  font-size: 75px;
+  font-family: 'Open Sans', sans-serif;
 }
