--- a/css/default.css
+++ b/css/default.css
@@ -19,6 +19,20 @@ body {
   color: white;
 }
 
+#searchDiv {
+  margin-top: 300px;
+}
+
+#searchResultDiv {
+  height: 400px;
+
+}
+
+#submitSearch {
+  background-color: #383838;
+  color: white;
+}
+
 #buyButton {
   margin-right: 50px;
 }
@@ -26,6 +40,11 @@ body {
 #mainTitle {
   color: white;
   margin-top: 75px;
+}
+
+#mountainText {
+  background-color: #383838;
+  margin-top: -30px;
 }
 
 .feature {
@@ -45,10 +64,6 @@ body {
   color: white;
 }
 
-#submitSearch {
-  margin-top: 20px;
-}
-
 #mountainBooks {
   width: 900px;
   height: 400px;
@@ -56,7 +71,6 @@ body {
 
 #featureText {
   color: white;
-  margin-top: 230px;
 }
 
 #openBook {
@@ -82,8 +96,21 @@ body {
 
 #featureTextThree {
   color: white;
+  margin-top: 100px
 }
 
 .featureThreeText {
   color: white;
 }
+
+#listBookButton {
+  background-color: #383838;
+  color: white;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+#listBookDiv {
+  margin-bottom: 50px;
+}
+
