Added sass files

--- a/css/default.css
+++ b/css/default.css
@@ -1,116 +1,4 @@
 body {
-  padding-top: 51px;
-}
+  color: black; }
 
-@media screen and (min-width: 468px) {
-   #mainTitle {
-    font-size: 180px
-   }
-}
-
-.jumboMain {
-  background-image: url(../images/library.jpg);
-  background-size: cover;
-  height: 1100px;
-}
-
-#brand {
-  color: white;
-}
-
-#searchDiv {
-  margin-top: 300px;
-}
-
-#submitSearch {
-  background-color: #383838;
-  color: white;
-}
-
-#buyButton {
-  margin-right: 50px;
-}
-
-#mainTitle {
-  color: white;
-  margin-top: 75px;
-}
-
-#jumboSearchResult {
-  background-color: white;
-}
-
-#mountainText {
-  background-color: #383838;
-  margin-top: -30px;
-}
-
-.feature {
-  background-image: url(../images/mountainBooks.jpg);
-  background-size: cover;
-  height: 650px;
-  margin-top: -30px;
-}
-
-.featureTwo {
-  background-color: #383838;
-  height: 600px;
-  margin-top: -30px;
-}
-
-#mainFeature {
-  color: white;
-}
-
-#mountainBooks {
-  width: 900px;
-  height: 400px;
-}
-
-#featureText {
-  color: white;
-}
-
-#openBook {
-  width: 600px;
-  height: 200px;
-}
-
-#featureTextTwo {
-  color: white;
-  margin-top: 65px;
-}
-
-#carryBooks {
-  margin-top: 65px;
-}
-
-.featureThree {
-  background-image: url(../images/booksStacked.jpg);
-  background-size: cover;
-  height: 650px;
-  margin-top: -30px;
-}
-
-#featureTextThree {
-  color: white;
-  margin-top: 100px
-}
-
-.featureThreeText {
-  color: white;
-}
-
-#listBookDiv {
-  margin-bottom: 50px;
-}
-
-#listBookButton {
-  background-color: #383838;
-  color: white;
-  margin-bottom: 100px;
-  margin-top: 100px;
-}
-
-
-
+/*# sourceMappingURL=default.css.map */
